Refactor code structure for improved readability and maintainability

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import "tailwindcss";
 
 :root {
@@ -19,4 +20,5 @@
 body {
   background-color: var(--color-body);
   color: var(--color-text);
+  font-family: 'Fustat', sans-serif;
 }
