--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -20,6 +20,11 @@
 body {
   background-color: var(--color-body);
   color: var(--color-text);
-  font-family: 'Fustat', sans-serif;
+  font-family: "Fustat", sans-serif;
+  cursor: url('./assets/favicon.png'), auto;
   @apply max-w-[1440px] mx-auto;
+}
+
+button:hover, a:hover {
+  cursor: url('./assets/favicon.png'), pointer;
 }
